Fix for overflow on front page

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -15,6 +15,13 @@ body {
     flex-direction: column; */
 }
 
+/* Allow scrolling on landing page only */
+body:has(.front-page-header) {
+    min-height: 100vh;
+    height: auto;
+    overflow: auto;
+}
+
 
 a {
     color: #f1b300;
@@ -644,7 +651,7 @@ tr {
   
   .hero {
     background: url("images/wallpaper.png");
-    height: 920px;
+    min-height: 920px;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -652,8 +659,8 @@ tr {
   
   .hero-group {
     margin: 0 auto;
-    max-width: 600px;  
-    padding: 150px 50px;
+    max-width: 600px;
+    padding: 150px 50px 200px 50px;
     text-align: center;
   }
   
@@ -684,7 +691,7 @@ tr {
   
   @media (max-width: 640px) {
     .hero-group {
-      padding: 100px 20px;
+      padding: 100px 20px 200px 20px;
     }
     
     .hero h1 {
